plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.company'
version = '0.0.1-SNAPSHOT'
description = 'Exam portal backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Standard web starter (includes Spring MVC + embedded Tomcat)
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// JPA for database access
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

	// PostgreSQL driver (essential for Postgres connection)
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Lombok for boilerplate reduction
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//Deals with mails
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//Deals with envs
	implementation 'io.github.cdimascio:dotenv-java:3.0.0'

	//Grants me swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

	//Helps with validation annotations.
	implementation("org.springframework.boot:spring-boot-starter-validation:4.1.0-M1")

	// Main test starter (includes JUnit, Spring Test, Mockito, etc.)
	// Supports @DataJpaTest, @WebMvcTest, @SpringBootTest, etc.
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}